// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password Field Test Test date picker field with default value property 1`] = `
<input
  name="birthday"
  onChange={[Function]}
  type="datetime-local"
  value="2019-07-08T14:47:37.530Z"
/>
`;

exports[`Password Field Test Test date picker field with onChange function 1`] = `
<input
  name="birthday"
  onChange={[Function]}
  type="datetime-local"
  value="2019-07-08T14:47:37.531Z"
/>
`;

exports[`Password Field Test Test natural date picker field 1`] = `
<input
  name="birthday"
  onChange={[Function]}
  type="datetime-local"
  value="2019-07-08T14:47:37.523Z"
/>
`;
